--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Tom Preston-Werner" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
+   <meta name="author" content="Jinxing Hu" />
+   <link href="http://feeds.feedburner.com/peachbupt" rel="alternate" title="peach" type="application/atom+xml" />
    <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>
 
    <!-- syntax highlighting CSS -->
@@ -27,7 +27,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">Tom Preston-Werner</a>
+    <a href="/">Jinxing Hu</a>
     <a class="extra" href="/">home</a>
   </div>
 
@@ -36,23 +36,22 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="contact">
       <p>
-        Tom Preston-Werner
+        Jinxing Hu
         <br />
         Cofounder of
           <a href="https://codestarter.org/">Codestarter</a>,
           <a href="https://github.com/">GitHub</a>
         <br />
-        tom@mojombo.com
+        peachbupt@gamil.com
       </p>
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/mojombo/">github.com/mojombo</a><br />
-        <a href="http://twitter.com/mojombo/">twitter.com/mojombo</a><br />
+        <a href="http://github.com/peachbupt/">github.com/peachbupt</a><br />
       </p>
     </div>
     <div class="rss">
-      <a href="http://feeds.feedburner.com/tom-preston-werner">
+      <a href="http://feeds.feedburner.com/peachbupt">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
       </a>
     </div>
@@ -71,17 +70,6 @@ if(document.location.protocol!='https:')
 if(typeof ClickTale=='function') ClickTale(206,0.3,"www03");
 </script>
 <!-- ClickTale end of Bottom part -->
-
-<!-- Google Analytics -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-6016902-1");
-pageTracker._trackPageview();
-</script>
-<!-- Google Analytics end -->
 
 </body>
 </html>
