--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Jinxing Hu" />
+   <meta name="author" content="Peach Bupt" />
    <link href="http://feeds.feedburner.com/peachbupt" rel="alternate" title="peach" type="application/atom+xml" />
    <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>
 
@@ -27,7 +27,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">Jinxing Hu</a>
+    <a href="/">Peach Bupt</a>
     <a class="extra" href="/">home</a>
   </div>
 
@@ -36,7 +36,7 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="contact">
       <p>
-        Jinxing Hu
+        Peach Bupt
         <br />
         Cofounder of
           <a href="https://codestarter.org/">Codestarter</a>,
